@startuml
class GlobalExceptionHandler {
  + handleInvalidTokenException()
  + handleValidationException()
  + handleNotFoundException()
  + handleDuplicateException()
  + handleAuthException()
}

class InvalidTokenException {
  + InvalidTokenException(String message)
}
class ValidationException {
  + ValidationException(String message)
}
class NotFoundException {
  + NotFoundException(String message)
}
class DuplicateException {
  + DuplicateException(String message)
}
class AuthException {
  + AuthException(String message)
}

RuntimeException <|-- InvalidTokenException
RuntimeException <|-- ValidationException
RuntimeException <|-- NotFoundException
RuntimeException <|-- DuplicateException
RuntimeException <|-- AuthException

GlobalExceptionHandler ..> InvalidTokenException
GlobalExceptionHandler ..> ValidationException
GlobalExceptionHandler ..> NotFoundException
GlobalExceptionHandler ..> DuplicateException
GlobalExceptionHandler ..> AuthException

@enduml